# esp32-client

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.esp32  sdkconfig.defaults.esp32c3  sdkconfig.defaults.esp32c5  sdkconfig.defaults.esp32c6  sdkconfig.defaults.esp32p4  sdkconfig.defaults.esp32s3  sdkconfig.old
asset/: index.html
asset/html/: index.html
boards/esp32/: board_config.h
boards/esp32s3/: board_config.h
boards/sample/esp32/: board_config.h
boards/sample/esp32s3/: board_config.h
boards/waveshare/esp32s3_touch_lcd_3.5/: board_config.h
boards/waveshare/esp32s3_touch_lcd_3.5c/: board_config.h  esp32s3_touch_lcd_3.5c.cc  esp32s3_touch_lcd_3.5c.cpp
boards/waveshare/esp32s3_zero/: board_config.h
components/assets_package/: CMakeLists.txt
components/assets_package/include/: black_image.h  model_basic.h
components/assets_package/src/: black_image.cc
components/audio_package/: CMakeLists.txt
components/audio_package/include/: audio_afe_processor.h  audio_codec.h  audio_service.h  codec_basic.h  processor_basic.h  service_basic.h
components/audio_package/src/: audio_afe_processor.cc  audio_codec.cc  audio_codec.h  audio_processor.cc  audio_processor.h  audio_service.cc  audio_service.h  codec_basic.cc  processor_basic.cc  service_basic.cc
components/board_package/: CMakeLists.txt
components/board_package/include/: board_basic.h
components/board_package/src/: board_basic.cc  board_basic.h
components/button_package/: CMakeLists.txt
components/button_package/include/: button_basic.h
components/button_package/src/: button_basic.cc
components/codec_package/: CMakeLists.txt
components/codec_package/include/: es8311_audio_codec.h  es8311_basic.h
components/codec_package/src/: es8311_audio_codec.cc  es8311_audio_codec.h  es8311_basic.cc
components/codecs_package/: CMakeLists.txt
components/codecs_package/src/: es8311_audio_codec.cc  es8311_audio_codec.h
components/common_package/src/: i2c_device.cc  i2c_device.h
components/device_package/: CMakeLists.txt
components/device_package/src/: i2c_device.cc  i2c_device.h
components/display_package/: CMakeLists.txt
components/display_package/include/: display_basic.h  display_lcd_basic.h  display_lvgl_basic.h  display_theme_basic.h
components/display_package/src/: display_basic.cc  display_lcd_basic.cc  display_lvgl_basic.cc  display_theme_basic.cc
components/driver_package/: CMakeLists.txt
components/driver_package/include/: axp2101_driver.h
components/driver_package/src/: axp2101_driver.cc  axp2101_driver.h
components/esp_codec_dev/include/: esp_codec_dev.h
components/language_package/: CMakeLists.txt
components/language_package/include/: language_basic.h  language_sound.h
components/language_package/src/: language_basic.cc  language_basic.h  language_sound.cc  language_sound.h
components/model_package/: CMakeLists.txt
components/model_package/src/: model_basic.cc  model_basic.h
components/network_package/: CMakeLists.txt
components/network_package/include/: network_basic.h  network_https.h  network_socket.h
components/network_package/src/: network_basic.cc  network_https.cc  network_https.h  network_socket.cc
components/opus_package/: CMakeLists.txt
components/opus_package/include/: opus_decoder.h  opus_encoder.h  opus_resampler.h  resampler_silk.h  resampler_structs.h
components/opus_package/src/: opus_decoder.cc  opus_decoder.h  opus_encoder.cc  opus_encoder.h  opus_resampler.cc  opus_resampler.h
components/platform_package/: CMakeLists.txt
components/platform_package/include/: dtls_srtp_module.h  media_module.h  peer_defaule_module.h  peer_module.h  peer_type_module.h
components/platform_package/src/: dtls_srtp_module.cc  media_module.cc  peer_module.cc
components/power_package/: CMakeLists.txt
components/power_package/include/: power_basic.h
components/power_package/src/: axp2101.cc  axp2101.h  power_basic.cc
components/processor_package/: CMakeLists.txt
components/processor_package/include/: afe_audio_processor.h
components/processor_package/src/: afe_audio_processor.cc
components/realtime_package/: CMakeLists.txt
components/realtime_package/include/: auth_basic.h  peer_basic.h  platform_basic.h  realtime_basic.h  signaling_basic.h  webrtc_basic.h
components/realtime_package/src/: auth_basic.cc  auth_basic.h  authentication.cc  authentication.h  authorize.cc  authorize.h  peer_basic.cc  platform_basic.cc  realtime_basic.cc  realtime_basic.h  signaling.cc  signaling.h  signaling_basic.cc  signaling_basic.h  webrtc_basic.cc
components/request_package/: CMakeLists.txt
components/request_package/src/: http_request.cc  http_request.h
components/runtime_package/: CMakeLists.txt
components/runtime_package/src/: runtime_basic.cc  runtime_basic.h
components/system_package/: CMakeLists.txt
components/system_package/include/: system_basic.h  system_hostname.h  system_settings.h  system_time.h
components/system_package/src/: system_basic.cc  system_basic.h  system_hostname.cc  system_hostname.h  system_reboot.cc  system_reboot.h  (+3 more)
components/ui_package/: CMakeLists.txt
components/utils_package/: CMakeLists.txt
components/wifi_package/: CMakeLists.txt
config/: client_config.h  common_config.h
html/: index.html
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c  main.cc  main.cpp
main/application/: application.cc  application.h
main/audio/: audio.c  audio.h  audio_server.cpp  audio_server.h  audio_service.cc  audio_service.h  audio_speaker.c  audio_speaker.h
main/board/: board.c  board.cpp  board.h
main/button/: button.c  button.cpp  button.h
main/config/: common_config.h  config.h
main/device/: host_name.cc  host_name.cpp  host_name.h
main/realtime/: realtime.cc  realtime.h
main/server/: server.c  server.cc  server.h
main/system/: system.cc  system.h
main/wifi/: wifi_connect.c  wifi_connect.cc  wifi_connect.h  wifi_manage.c  wifi_manage.cc  wifi_manage.h
tools/: tools.py
tools/partitions/: partition_16m.csv
(+86 files in other folders)
